# x2apic-rs

./: Cargo.toml  README.md  rust-toolchain.toml
src/: lib.rs
src/ioapic/: ioapic_regs.rs  irq_entry.rs  mod.rs
src/lapic/: builder.rs  lapic_msr.rs  mod.rs
